@@ -1,3 +1,5 @@
+- add new step "choose desktop", before or hiding "choose groups"
+
 Version 10.4.182 - 30 August 2007, by Thierry Vignaud
 
 - enable snd-ac97-codec power_save=1 option if installed on laptop (#32213)
